--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -135,9 +135,11 @@ catkin_package(
 # add_executable(${PROJECT_NAME}_node src/youbot_driver_interface_node.cpp)
 add_executable(youbot_driver_interface 
     src/youbot_node.cpp
-    src/YouBotConfiguration.cpp
-    src/YouBotDriverWrapper.cpp
+    src/YouBotBaseConfiguration.cpp
     src/YouBotBaseWrapper.cpp
+    src/YouBotArmConfiguration.cpp
+    src/YouBotArmWrapper.cpp
+    src/YouBotDriverWrapper.cpp
     # src/joint_state_observer_oodl.cpp
 )
 ## Rename C++ executable without prefix
