add singleton class YouBotConfiguration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ add_compile_options(-std=c++14)
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED COMPONENTS youbot_driver youbot_msgs roscpp rosconsole actionlib tf control_msgs brics_actuator pr2_msgs diagnostic_msgs geometry_msgs nav_msgs pr2_msgs std_msgs std_srvs trajectory_msgs)
+find_package(catkin REQUIRED COMPONENTS youbot_driver roscpp rosconsole actionlib tf control_msgs brics_actuator pr2_msgs diagnostic_msgs geometry_msgs nav_msgs pr2_msgs std_msgs std_srvs trajectory_msgs)
 find_package(Boost REQUIRED COMPONENTS thread date_time filesystem system)
 
 ## preprocessor definitions
@@ -140,8 +140,8 @@ add_executable(youbot_driver_interface
     src/YouBotArmConfiguration.cpp
     src/YouBotArmWrapper.cpp
     src/YouBotDriverWrapper.cpp
-    # src/joint_state_observer_oodl.cpp
-)
+	src/YouBotConfiguration.cpp
+         )
 
 add_executable(youbot_arm_test 
     src/test.cpp 
