refactor class driverWrapper

--- a/param/youbot_configuration.yaml
+++ b/param/youbot_configuration.yaml
@@ -1,4 +1,11 @@
-controlType:
-  armJointPositionControl: false
-  baseJointVelocityControl: true
-  armJointPositionControl2: true
+baseControlType:
+  baseVelocityControl: true
+  basePositionControl: false
+  baseJointVelocityControl: false
+  baseJointCurrentControl: false
+  baseJointToqueControl: false
+
+armControlType:
+  armJointPositionControl: true
+  armJointVelocityControl: false
+  armJointToqueControl: false
