--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -150,11 +150,7 @@ catkin_package(
 ## The recommended prefix ensures that target names across packages don't collide
 # add_executable(${PROJECT_NAME}_node src/youbot_driver_interface_node.cpp)
 add_executable(youbot_driver_interface 
-    	src/youbot_node.cpp
-		src/YouBotBaseWrapper.cpp
-        src/YouBotArmWrapper.cpp
-    	src/YouBotDriverWrapper.cpp
-		src/YouBotConfiguration.cpp
+		src/YouBotRosWrapper.cpp
         )
 
 add_executable(youbot_arm_test 
